fixed visibility from none to visible

--- a/styles/form.css
+++ b/styles/form.css
@@ -60,7 +60,7 @@ input[type=text], input[type=range], input[type=radio] {
 }
 
 #validate {
-	visibility: none;
+	visibility: visible;
 	margin: 10px;
 	padding: 0.5rem;
 	color: red;
@@ -72,7 +72,7 @@ input[type=text], input[type=range], input[type=radio] {
 }
 
 #emailvalidate {
-	visibility: none;
+	visibility: visible;
 	margin: 10px;
 	padding: 0.5rem;
 	color: red;
